fix(header): adjust header height and alignment for improved layout

--- a/components/layouts/header/header.module.css
+++ b/components/layouts/header/header.module.css
@@ -7,7 +7,7 @@
 .header {
     --header-color-text: var(--clr-text-main);
     --header-color-text-secondary: #f5f5f5;
-    --header-height: max(55px, 5vw);
+    --header-height: max(55px, 4vw);
     --header-color-yellow: #EDB503;
     --header-color-red: #D46153;
     --header-color-green: #1DAF9A;
@@ -20,7 +20,7 @@
     min-height: var(--header-height);
     background-color: transparent;
     color: var(--header-color-text);
-    border: 1px solid red;
+
 }
 
 html[data-dark-mode="true"] .header {
@@ -37,7 +37,7 @@ html[data-dark-mode="true"] .header {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr auto;
-    align-items: center;
+    align-items: start;
     gap: 1rem;
 }
 
